<resources>
    <string name="app_name">Real Estate Manager</string>
    <!-- Titles of fragments -->
    <string name="frg_map_title">New York</string>
    <string name="frg_add_title">New property</string>
    <string name="frg_edit_title">Modify information\'s</string>
    <string name="frg_search_title">Search Estates</string>
    <string name="frg_simulator_title">Loan calculator</string>
    <!-- menu items -->
    <string name="mi_title_search">Search property</string>
    <string name="mi_title_add_property">Add property</string>
    <string name="mi_title_edit_property">Edit property</string>
    <string name="mi_title_save_change">Save change</string>
    <string name="mi_title_discard_change">Discard change</string>
    <string name="mi_dollar_to_euro"><![CDATA[$ → €]]></string>
    <string name="mi_title_euro_to_dollar"><![CDATA[€ → $]]></string>
    <string name="mi_title_loan_calculator">Loan calculator</string>
    <string name="mi_reset_row_query">Display all estates</string>
    <string name="add_frg_date_init_label">Date of take of the property in manage:</string>
    <!-- commons strings -->
    <string name="description">Description</string>
    <string name="price_dollar">%s $</string>
    <string name="price_euro">%s €</string>
    <string name="input_hint_1">1</string>
    <!-- Map fragment -->
    <string name="error_msg_map_service_not_available">Sorry, Your phone don\'t have Google Map Service.</string>
    <string name="ask_location_account_title">Localisation permissions.</string>
    <string name="ask_location_account_message">To find the restaurant near by you, the app needs access to your location.\nYou can set the location in System Settings globally or in part of Real Estate Manager app.</string>
    <!-- detail fragment -->
    <string name="img_description_about_property_image">about property image</string>
    <string name="since">Since</string>
    <string name="detail_date_init">2021/01/06</string>
    <string name="img_description_small_static_map">small static map</string>
    <string name="detail_rooms">%d rooms</string>
    <!-- add fragment -->
    <string name="add_type_dropdown_menu">Type of property</string>
    <string name="add_price_dollar">Price ($)</string>
    <string name="add_surface_m2">Surface (m²)</string>
    <string name="add_rooms">Rooms</string>
    <string name="add_bedrooms">Bedrooms</string>
    <string name="add_bathrooms">Bathrooms</string>
    <string name="add_nearby">Amenities near this property</string>
    <string name="add_address">Address</string>
    <string name="add_quarter">Quarter</string>
    <string name="add_on_market_since">On Market since</string>
    <string name="add_sold">Sold</string>
    <string name="add_sold_on">Sold on</string>
    <string name="add_manage_by">Manage by</string>
    <string name="add_add_image_title">Add image from</string>
    <string name="add_add_img_camera">Camera</string>
    <string name="add_add_img_gallery">Gallery</string>
    <string name="add_hint_numeric_price">100,000,000</string>
    <string name="add_location">Location</string>
    <string name="add_type">Type of property</string>
    <string name="add_date"><![CDATA[Date of put on market & sold]]></string>
    <string name="add_manage_by_agent">Manage by agent</string>
    <string name="add_recycler_new_image">new image for \'add new property\'</string>
    <string name="drag_image_button">drag image button</string>
    <string name="add_description_placeholder">Description of added image</string>
    <!-- add fragment message -->
    <string name="warning_date_sold_smaller_than_register">The register date on market is greater than sold date ? How so ?</string>
    <string name="warning_missing_fields">One or more of required inputs is empty.</string>
    <!-- amenities -->
    <string name="school">School</string>
    <string name="playground">Playground</string>
    <string name="shop">Shops</string>
    <string name="buses">Bus</string>
    <string name="subway">Subway</string>
    <string name="park">Park</string>
    <!-- address form -->
    <string name="add_form_address">Address</string>
    <string name="add_form_address_suite">Address, suite, etc.</string>
    <string name="add_form_city">City</string>
    <string name="add_address_form_quarter">Quarter</string>
    <string name="add_address_form_postal_code">ZIP/postal code</string>
    <!-- detail fragment -->
    <string name="detail_text_sold">Sold</string>
    <string name="detail_surface_integer">surface: %dm²</string>
    <string name="detail_bathroom">%d bathrooms</string>
    <string name="detail_bedroom">%d bedrooms</string>
    <string name="detail_united_states">United States</string>
    <string name="detail_managed_by">Managed by:</string>
    <string name="detail_near_by">Amenities:</string>
    <string name="detail_estate_available">Estate is available</string>
    <!-- divers -->
    <string name="snack_action_btn">OK</string>
    <!-- loan fragment -->
    <string name="loan_calc_contribution">Contribution</string>
    <string name="loan_interest_rate">Interest Rate (%)</string>
    <string name="loan_duration">Duration of loan</string>
    <string name="loan_per_month_dollar">%s $ / month</string>
    <string name="loan_per_month_euro">%s € / month</string>
    <string name="loan_years">Years</string>
    <string name="loan_months">Months</string>
    <string name="list_empty_item_type">Type of estate</string>
    <string name="list_empty_item_quarter">Quarter</string>
    <string name="list_empty_item_price">Price: … $</string>
    <!-- search fragment -->
    <string name="search_by_type">All types</string>
    <string name="search_in_quarter">Search in quarter:</string>
    <string name="search_by_surface_title">Search by surface</string>
    <string name="min_surface">Min surface</string>
    <string name="max_surface">Max surface</string>
    <string name="min_price">Min price</string>
    <string name="max_price">Max price</string>
    <string name="min_rooms">Min rooms:</string>
    <string name="min_bathrooms">Min bathrooms</string>
    <string name="min_bedrooms">Min bedrooms</string>
    <string name="on_market_since">On market since</string>
    <string name="include_sold_properties">Include sold properties</string>
    <string name="exclude_sold_properties">Exclude sold properties</string>
    <string name="min_greater_max">Pleas, correct the values. Min is greater than max.</string>
    <string name="detail_address_title">Address</string>
    <string name="search_give_zero_data">There is no estate for this research.</string>
    <string name="search_min_max_velues_error">The min and max values isn\'t correctly set.</string>
</resources>
