<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mi_edit"
        android:icon="@drawable/ic_edit_white_24"
        android:title="@string/mi_title_edit_property"
        app:showAsAction="always"/>

    <item
        android:id="@+id/mi_loan_calculator"
        android:icon="@drawable/ic_account_balance_white_24"
        android:title="@string/mi_title_loan_calculator"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/mi_dollar_to_euro"
        android:focusable="false"
        android:title="@string/mi_dollar_to_euro"/>

    <item
        android:id="@+id/mi_euro_to_dollar"
        android:focusable="false"
        android:title="@string/mi_title_euro_to_dollar"/>
</menu>