<?xml version="1.0" encoding="utf-8"?>
<androidx.gridlayout.widget.GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/size_n"
    app:columnCount="3">

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/amenities_shop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/shop"
        app:layout_column="0"
        app:layout_columnWeight="1"
        app:layout_row="0" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/amenities_park"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/park"
        app:layout_column="1"
        app:layout_columnWeight="1"
        app:layout_row="0" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/amenities_playground"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/playground"
        app:layout_column="2"
        app:layout_columnWeight="1"
        app:layout_row="0" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/amenities_school"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/school"
        app:layout_column="0"
        app:layout_columnWeight="1"
        app:layout_row="1" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/amenities_buses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/buses"
        app:layout_column="1"
        app:layout_columnWeight="1"
        app:layout_row="1" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/amenities_subway"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/subway"
        app:layout_column="2"
        app:layout_columnWeight="1"
        app:layout_row="1" />

</androidx.gridlayout.widget.GridLayout>