<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_search_engine"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:paddingHorizontal="@dimen/size_n"
    android:paddingTop="@dimen/size_n"
    android:paddingBottom="@dimen/size_b"
    tools:context=".ui.fragments.SearchEngine">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/type_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_by_type"
            android:labelFor="@+id/searchF_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <AutoCompleteTextView
                android:id="@+id/searchF_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/surface_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_n"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/type_layout">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/min_layout"
                style="@style/InputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/size_n"
                android:hint="@string/min_surface">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/searchF_min_surface"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/max_surface">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/searchF_max_surface"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/price_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_n"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/surface_layout">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/size_n"
                android:hint="@string/min_price">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/searchF_min_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/max_price">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/searchF_max_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/rooms_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_b"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price_layout">

            <TextView
                android:id="@+id/rooms_title"
                android:layout_width="@dimen/input_title_long"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/size_n"
                android:text="@string/min_rooms"
                android:textSize="@dimen/size_text_n" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/size_n"
                android:layout_weight="1"
                android:hint="@string/input_hint_1"
                android:textColorHint="@color/colorTextPrimaryAlpha"
                android:labelFor="@+id/searchF_rooms">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/searchF_rooms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/bathrooms_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_s"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rooms_layout">


            <TextView
                android:id="@+id/bathrooms_title"
                android:layout_width="@dimen/input_title_long"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/size_n"
                android:text="@string/min_bathrooms"
                android:textSize="@dimen/size_text_n" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/size_n"
                android:layout_weight="1"
                android:hint="@string/input_hint_1"
                android:textColorHint="@color/colorTextPrimaryAlpha"
                android:labelFor="@+id/searchF_bathrooms">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/searchF_bathrooms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/bedrooms_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_s"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bathrooms_layout">

            <TextView
                android:id="@+id/bedrooms_title"
                android:layout_width="@dimen/input_title_long"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/size_n"
                android:text="@string/min_bedrooms"
                android:textSize="@dimen/size_text_n" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/size_n"
                android:layout_weight="1"
                android:hint="@string/input_hint_1"
                android:textColorHint="@color/colorTextPrimaryAlpha"
                android:labelFor="@+id/searchF_bedrooms">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/searchF_bedrooms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/quarter_layout"
            style="@style/InputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_b"
            android:hint="@string/search_in_quarter"
            android:labelFor="@+id/searchF_quarter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bedrooms_layout">

            <EditText
                android:id="@+id/searchF_quarter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="non"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/size_n"
            app:layout_constraintTop_toBottomOf="@+id/quarter_layout"
            android:visibility="gone">


            <TextView
                android:id="@+id/date_register_title"
                android:layout_width="@dimen/input_title_long"
                android:layout_height="wrap_content"
                android:padding="@dimen/size_n"
                android:layout_marginEnd="@dimen/size_n"
                android:text="@string/on_market_since"
                android:textSize="@dimen/size_text_n" />

                <TextView
                    android:id="@+id/searchF_on_market_since"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/size_n"
                    android:textSize="@dimen/size_text_n"
                    android:gravity="center"
                    android:background="@android:color/white"
                    tools:text="@string/detail_date_init"
                    android:textAlignment="center" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/sold_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/size_n"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_layout">

            <TextView
                android:id="@+id/searchF_sold_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/size_n"
                android:textSize="@dimen/size_text_n"
                android:text="@string/include_sold_properties"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/searchF_sold_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/size_n"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>